style.css
/* Styling */

body {
    font-family: Roboto, sans-serif;
}

.header, 
.footer {
    background-color: #1F2937;
}

h1.main-text {
    font-size: 48px;
    font-weight: extra-bold;
    color: #F0FAF8;
}

.hero-content p,
.nav ul {
    font-size: 18px;
    color: #E5E7EB;
}

.nav ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
}

.logo {
    font-size: 24px;
    color: #F9FAF8;
}

button, 
.cta {
    background-color: #3882F6;
}

button {
    font-size: 16px;
    font-weight: bold;
    border-radius: 4px;
    color: #E5E7EB;
    padding: 8px 25px;
    border: 0;
}

/* Removes the button 3-D effect */
button:active {
    border-style: outset;
}

.information h1 {
    font-size: 36px;
    font-weight: extra-bold;
    color: #1F2937;
}

.quote {
    background-color: #E5E7EB;
}

.quote blockquote {
    font-size: 36px;
    font-weight: light;
    font-style: italic;
    color: #1F2937
}


/* Layout */

/* body {
    padding: 0px 150px;
} */

.header {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    padding: 10px 150px;
}

.nav {
    display: flex;
    justify-content: space-between;
}

.nav ul {
    display: flex;
}

.nav li {
    padding-left: 20px;
}

.hero {
    display: flex;
    gap: 40px;
    align-items: center;
    justify-content: space-between;
    padding: 150px 0px;
}

.hero-content {
    /* max-width: 40%; */
    flex-grow: 1;
}

.hero-image {
    flex-grow: 1;
}

.hero-image img {
    width: 600px;
    object-fit: contain;
}

.information {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.cardlist {
    display: flex;
    flex-direction: row;
    gap: 100px;
}

.card {
    max-width: 250px;
}

.card img {
    width: 250px;
}

.card p {
    text-align: center;
}

